--- a/index.html
+++ b/index.html
@@ -20,14 +20,16 @@
   <div class="container home">
 
     <header>
-      <h1>Fun Bus</h1>
+      <div class="container-header">
+        <h1>Fun Bus</h1>
 
-      <nav>
-        <a href="#">Home</a>
-        <a href="#">About Us</a>
-        <a href="#">Blog</a>
-        <a href="#">Contact</a>
-      </nav>
+        <nav>
+          <a href="#">Home</a>
+          <a href="#">About Us</a>
+          <a href="#">Blog</a>
+          <a href="#">Contact</a>
+        </nav>
+      </div>
 
       <img class="funBus" src="img/fun-bus.jpg" alt="Fun Bus.">
 
